25/04/2011 OsiSpx
  - add methods to set/get/check timelimit
  - fix bug in solve methods where cached result vectors where not cleared
  - fix setWarmStart to swap status for slack variables as in getWarmStart
  - fix caching flags (bitwise negation is ~, not !)
  - redirect set/get name discipline to base class
  - fix primal/dual objective limit: take objoffset into account, correct check if limit changed after solve
  - getColSolution and getObjValue now return lower bound and value in lower bound before solve

01/04/2011 OsiGlpk
  - if initial basis is invalid or singular in initialSolve or resolve,
    construct advanced basis and try again

31/03/2011 OsiGrb
  - fixed handling of free variables in setWarmStart

30/03/2011 OsiGrb
  - fixed memory leak in loadProblem

21/03/2011 OsiCommonTest, unittest
  - add classes TestOutcome{s} to collect outcome of unittests
  - add macros to simplify asserts and exception catching and storing results as TestOutcome
  - change general and OsiGlpk tests to use new macros
  - return number of unexpected errors as return code of unittest
  - add parameter -verbosity to unittest to specify amount of output of unittests
  - a bit cleanup

21/03/2011 started CHANGELOG